--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 .navbar-collapse form.navbar-form.navbar-left { margin-top: -1px; }
 .navbar-collapse form.navbar-form.navbar-left input { height: 40px; }
-.jumbotron { margin-top: -10px; background: url('http://fc07.deviantart.net/fs70/i/2011/211/a/4/super_metroid_hd_by_modusprodukt-d427im7.jpg') center center no-repeat; background-size: cover; }
+.jumbotron { margin-top: -10px; background: url('../img/metroid_bg.png') center center no-repeat; background-size: cover; }
 .jumbotron div > * { text-shadow: 0px 1px 0px #000; }
 .navbar-nav li a.not-anim:hover { background: none; }
 .home .row.presentation .col-lg-4 { text-align: center; }
@@ -9,3 +9,12 @@
 .home .row.main-search input { font-size: 25px; border-radius: 3px 0 0 3px; border: none; padding: 6px; }
 .home .row.main-search button { font-size: 19px; border-radius: 0 3px 3px 0; margin-top: -13px; border-radius: 0 3px 3px 0; margin-left: -3px; padding: 11px 24px; }
 .rom-list { display: none; }
+#waitForIt { background: rgba(0,0,0,.8);
+width: 100%;
+height: 100%;
+position: fixed;
+top: 0;
+right: 0;
+z-index: 9999; display: none; }
+#waitForIt * { vertical-align: middle; }
+#waitForIt span { top: 50%; font-size: 100px; }
